--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SmartClass
+application.vendor=Pedro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,38 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SmartClass.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-lang-2.5.jar=C:\\Users\\Pedro\\Downloads\\lib\\commons-lang-2.5.jar
+file.reference.contexttoolkit-2.0.jar=C:\\Users\\Pedro\\Downloads\\contexttoolkit-2.0.jar
+file.reference.dom4j-1.6.1.jar=C:\\Users\\Pedro\\Downloads\\lib\\dom4j-1.6.1.jar
+file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar=C:\\Users\\Pedro\\Downloads\\lib\\hibernate-jpa-2.0-api-1.0.0.Final.jar
+file.reference.hibernate3.jar=C:\\Users\\Pedro\\Downloads\\lib\\hibernate3.jar
+file.reference.jahmm-0.6.1.jar=C:\\Users\\Pedro\\Downloads\\lib\\jahmm-0.6.1.jar
+file.reference.jdom.jar=C:\\Users\\Pedro\\Downloads\\lib\\jdom.jar
+file.reference.log4j-1.2.16.jar=C:\\Users\\Pedro\\Downloads\\lib\\log4j-1.2.16.jar
+file.reference.mysql-connector-java-3.1.12-bin.jar=C:\\Users\\Pedro\\Downloads\\lib\\mysql-connector-java-3.1.12-bin.jar
+file.reference.RXTXcomm.jar=C:\\Users\\Pedro\\Downloads\\lib\\RXTXcomm.jar
+file.reference.slf4j-api-1.6.0.jar=C:\\Users\\Pedro\\Downloads\\lib\\slf4j-api-1.6.0.jar
+file.reference.slf4j-log4j12-1.6.0.jar=C:\\Users\\Pedro\\Downloads\\lib\\slf4j-log4j12-1.6.0.jar
+file.reference.weka.jar=C:\\Users\\Pedro\\Downloads\\lib\\weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.ContextToolKit.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.RXTXcomm.jar}:\
+    ${file.reference.commons-lang-2.5.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar}:\
+    ${file.reference.hibernate3.jar}:\
+    ${file.reference.jahmm-0.6.1.jar}:\
+    ${file.reference.jdom.jar}:\
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.mysql-connector-java-3.1.12-bin.jar}:\
+    ${file.reference.slf4j-api-1.6.0.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.0.jar}:\
+    ${file.reference.weka.jar}:\
+    ${file.reference.contexttoolkit-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
