--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,28 @@ dist.jar=${dist.dir}/SmartClass.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.9.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\commons-codec-1.9.jar
+file.reference.commons-io-2.5.jar=C:\\Users\\Pedro\\Downloads\\commons-io-2.5\\commons-io-2.5.jar
 file.reference.commons-lang-2.5.jar=C:\\Users\\Pedro\\Downloads\\lib\\commons-lang-2.5.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\commons-logging-1.2.jar
 file.reference.contexttoolkit-2.0.jar=C:\\Users\\Pedro\\Downloads\\contexttoolkit-2.0.jar
 file.reference.dom4j-1.6.1.jar=C:\\Users\\Pedro\\Downloads\\lib\\dom4j-1.6.1.jar
+file.reference.fluent-hc-4.5.2.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\fluent-hc-4.5.2.jar
+file.reference.gson-2.7.jar=C:\\Users\\Pedro\\Downloads\\gson-2.7.jar
 file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar=C:\\Users\\Pedro\\Downloads\\lib\\hibernate-jpa-2.0-api-1.0.0.Final.jar
 file.reference.hibernate3.jar=C:\\Users\\Pedro\\Downloads\\lib\\hibernate3.jar
+file.reference.httpclient-4.5.2.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\httpclient-4.5.2.jar
+file.reference.httpclient-cache-4.5.2.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\httpclient-cache-4.5.2.jar
+file.reference.httpclient-win-4.5.2.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\httpclient-win-4.5.2.jar
+file.reference.httpcore-4.4.4.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\httpcore-4.4.4.jar
+file.reference.httpmime-4.5.2.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\httpmime-4.5.2.jar
+file.reference.jackson-annotations-2.8.0.jar=C:\\Users\\Pedro\\Downloads\\jackson-annotations-2.8.0.jar
+file.reference.jackson-core-2.8.1.jar=C:\\Users\\Pedro\\Downloads\\jackson-core-2.8.1.jar
+file.reference.jackson-databind-2.8.4.jar=C:\\Users\\Pedro\\Downloads\\jackson-databind-2.8.4.jar
 file.reference.jahmm-0.6.1.jar=C:\\Users\\Pedro\\Downloads\\lib\\jahmm-0.6.1.jar
 file.reference.jdom.jar=C:\\Users\\Pedro\\Downloads\\lib\\jdom.jar
+file.reference.jna-4.1.0.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\jna-4.1.0.jar
+file.reference.jna-platform-4.1.0.jar=C:\\Users\\Pedro\\Downloads\\httpcomponents-client-4.5.2\\lib\\jna-platform-4.1.0.jar
 file.reference.log4j-1.2.16.jar=C:\\Users\\Pedro\\Downloads\\lib\\log4j-1.2.16.jar
 file.reference.mysql-connector-java-3.1.12-bin.jar=C:\\Users\\Pedro\\Downloads\\lib\\mysql-connector-java-3.1.12-bin.jar
 file.reference.RXTXcomm.jar=C:\\Users\\Pedro\\Downloads\\lib\\RXTXcomm.jar
@@ -58,7 +73,22 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.0.jar}:\
     ${file.reference.slf4j-log4j12-1.6.0.jar}:\
     ${file.reference.weka.jar}:\
-    ${file.reference.contexttoolkit-2.0.jar}
+    ${file.reference.contexttoolkit-2.0.jar}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.2.jar}:\
+    ${file.reference.httpclient-4.5.2.jar}:\
+    ${file.reference.httpclient-cache-4.5.2.jar}:\
+    ${file.reference.httpclient-win-4.5.2.jar}:\
+    ${file.reference.httpcore-4.4.4.jar}:\
+    ${file.reference.httpmime-4.5.2.jar}:\
+    ${file.reference.jna-4.1.0.jar}:\
+    ${file.reference.jna-platform-4.1.0.jar}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.gson-2.7.jar}:\
+    ${file.reference.jackson-annotations-2.8.0.jar}:\
+    ${file.reference.jackson-core-2.8.1.jar}:\
+    ${file.reference.jackson-databind-2.8.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
